Roles UI complete Added some table TD classes for content alignment Added some responsive datatable classes to fix horizontal scroll Added no-sort class to disable sorting on datatables (in previous commit)

--- a/src/Orchard.Web/Themes/TheAdmin/Assets/Theme/Less/orchard-admin-shim.less
+++ b/src/Orchard.Web/Themes/TheAdmin/Assets/Theme/Less/orchard-admin-shim.less
@@ -124,9 +124,15 @@ select {
 }
 
 
-/*.am-checkbox, .am-radio {
-    padding: 0;
-}*/
+.am-checkbox, .am-radio {
+    >label{
+        &:empty{
+            &:before{
+                margin-right:0;
+            }
+        }
+    }
+}
 
 .am-datatable-header:empty {
     display: none;
