--- a/src/Orchard.Web/Themes/TheAdmin/Assets/Theme/Less/orchard-flexbox-common.less
+++ b/src/Orchard.Web/Themes/TheAdmin/Assets/Theme/Less/orchard-flexbox-common.less
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: space-between;
     align-content: flex-start;
-    flex-wrap:nowrap;
-    
-        @media (max-width: @screen-xs-max) {
-            flex-wrap:wrap;
-        }
+    flex-wrap: nowrap;
+
+    @media (max-width: @screen-xs-max) {
+        flex-wrap: wrap;
+    }
 
     > div {
         width: auto;
@@ -20,10 +20,11 @@
             margin-right: 0px;
             margin-bottom: 20px;
             width: 100%;
-            
+
             &:first-child {
                 margin-right: 0px;
             }
+
             &:last-child {
                 margin-bottom: 0;
             }
@@ -34,5 +35,17 @@
         &:first-child {
             margin-top: 0;
         }
+    }
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-columns {
+    flex-direction: column;
+
+    .flex-column-container {
+        display: block;
     }
 }
